# srf-aios-schema

./: .gitignore  CHANGELOG.md  LICENSE  NOTICE.txt  README.md  pyproject.toml
docs/: LICENSING.md
src/srf_aios_schema/: __init__.py  rair_v2.py
tests/: __init__.py  test_functional.py  test_rair_v2.py
