[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "srf-aios-schema"
version = "2.0.0"
description = "SRF AiOS Cognitive Architecture Schema Definitions"
readme = "README.md"
license = {text = "FRAND/SEP - See LICENSE file"}
authors = [
    {name = "Seldon Reflex Foundation", email = "foundation@seldonreflex.org"}
]
maintainers = [
    {name = "Thomson Nguyen", email = "thomson@seldonreflex.org"}
]
keywords = [
    "srf",
    "aios", 
    "cognitive-architecture",
    "ai-schemas",
    "reflexive-governance",
    "agent-identity"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent"
]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0,<3.0.0"
]

[project.urls]
Homepage = "https://github.com/SRF-PBC/srf-aios-schema"
Documentation = "https://github.com/SRF-PBC/srf-aios-schema#readme"
Repository = "https://github.com/SRF-PBC/srf-aios-schema.git"
Issues = "https://github.com/SRF-PBC/srf-aios-schema/issues" 
Changelog = "https://github.com/SRF-PBC/srf-aios-schema/blob/main/CHANGELOG.md"
"Seldon Reflex Foundation" = "https://www.seldonreflex.org"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0"
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=srf_aios_schema --cov-report=html --cov-report=term-missing"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
target-version = "py311"
line-length = 88
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "UP",  # pyupgrade
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "UP006", # Use `list` instead of `List` (keeping for backwards compat)
    "UP007", # Use `X | None` instead of `Optional[X]` (keeping for backwards compat)
    "ANN001", # Missing type annotation for function argument (Pydantic validators)
    "ANN201", # Missing return type annotation (Pydantic validators)
]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false